# vela-crypto

./: .gitignore  README.md  app.py  dashboard.py  explore.ipynb  main.py  pyproject.toml  requirements.txt  vela_crypto_model.ipynb
core/: analysis.py  backtest.py  collect.py  features.py  model.py  report.py  trading.py
data/: candidates_20250105_084358.csv  filtered_pairs_20250105_084358.csv  historical_ACMUSDT_20250105_084358.csv  historical_ADXUSDT_20250105_084358.csv  historical_AERGOUSDT_20250105_084358.csv  historical_ALCXUSDT_20250105_084358.csv  historical_ALPACAUSDT_20250105_084358.csv  historical_ARDRUSDT_20250105_084358.csv  historical_ARPAUSDT_20250105_084358.csv  historical_ASRUSDT_20250105_084358.csv  historical_ATMUSDT_20250105_084358.csv  historical_AVAUSDT_20250105_084358.csv  historical_BIFIUSDT_20250105_084358.csv  historical_COMBOUSDT_20250105_084358.csv  historical_DATAUSDT_20250105_084358.csv  historical_DIAUSDT_20250105_084358.csv  historical_FARMUSDT_20250105_084358.csv  historical_FIROUSDT_20250105_084358.csv  historical_FISUSDT_20250105_084358.csv  historical_FUNUSDT_20250105_084358.csv  historical_GTCUSDT_20250105_084358.csv  historical_HARDUSDT_20250105_084358.csv  historical_HIFIUSDT_20250105_084358.csv  historical_HOOKUSDT_20250105_084358.csv  historical_JUVUSDT_20250105_084358.csv  historical_KMDUSDT_20250105_084358.csv  historical_LEVERUSDT_20250105_084358.csv  historical_LISTAUSDT_20250105_084358.csv  historical_OGUSDT_20250105_084358.csv  historical_PERPUSDT_20250105_084358.csv  historical_PHBUSDT_20250105_084358.csv  historical_PIVXUSDT_20250105_084358.csv  historical_PROSUSDT_20250105_084358.csv  historical_QKCUSDT_20250105_084358.csv  historical_STMXUSDT_20250105_084358.csv  historical_TKOUSDT_20250105_084358.csv  historical_TNSRUSDT_20250105_084358.csv  historical_UFTUSDT_20250105_084358.csv  historical_UTKUSDT_20250105_084358.csv  historical_VICUSDT_20250105_084358.csv  (+4 more)
(+179 files in other folders)
